translation-tool/inputs/source_meta/objects/hsvc_Case_Impacted_Locations__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Impacted Locations</relationshipLabel>
        <relationshipName>Case_Impacted_Locations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HSvc_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_NMD__c</fullName>
        <label>NMD</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Location__c</fullName>
        <label>Impacted Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Impacted Locations</relationshipLabel>
        <relationshipName>Case_Impacted_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Case Impacted Locations</label>
    <nameField>
        <label>Case Impacted Locations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Impacted Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>